# gmapscrap-saas

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  docker-compose.local-remote-db.yml  docker-compose.prod.yml  docker-compose.yml  env.local-remote-db.example  pyproject.toml
.github/workflows/: docker-images.yml
backend/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/scrapers/: email_scraper.py  maps_scraper.py
backend/services/: ai_templates.py  content_preview.py  crypto.py  email_campaigns.py  email_delivery.py  email_validation.py  jobs.py  phone_region.py  template_seeds.py  text_normalization.py  whatsapp_validation.py
desktop/: README.md  api_client.py  app.py  build_macos_app.sh  requirements.txt  worker.py
desktop/assets/: gmapscrap.icns
docs/: local-remote-db.md  supabase.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: open-vps-db-tunnel.sh  validate_lead_emails.py  vps-db-bridge.sh
tests/: test_api_client.py  test_email_validation.py  test_lead_read.py
