[project]
name = "gmapscrap"
version = "0.1.0"
description = "Mini sistema web para coletar leads do Google Maps, enriquecer e-mails e salvar em PostgreSQL."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.0,<5.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "phonenumbers>=9.0.0,<10.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "selenium==4.43.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "cryptography (>=43.0.0,<47.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
